--- a/piedra_papel_tijera/package.json
+++ b/piedra_papel_tijera/package.json
@@ -1,6 +1,7 @@
 {
   "name": "piedra_papel_tijera",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,6 +18,10 @@
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
