--- a/piedra_papel_tijera/package.json
+++ b/piedra_papel_tijera/package.json
@@ -20,7 +20,8 @@
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
